2007-01-24 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_trackback3.rb,recent_comment3.rb: fix bug: enable to shoten title.

2007-01-24 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: support Amazon-ECS 2007-01-17: ISBN-13.

2007-01-23 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added blog-search.yahoo.co.jp

2007-01-21 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: modified not to escape anchor().
	* recent_trackback3.rb: rollback visible to visible_true.
	
2007-01-20 zunda <zunda at freeshell.org>
	* my-sequel.rb: MySequel::Conf: uncheck the restore checkbox
	onfocus instead of onchange. Thank you, Tada-san

2007-01-20 zunda <zunda at freeshell.org>
	* my-sequel.rb: MySequel::Conf: added event handlers so default
	values are displayed when checkboxes are checked and
	checkboxes are unchecked when settings are edited.

2007-01-20 zunda <zunda at freeshell.org>
	* my-sequel.rb: MySequel::Conf: modified to execute event
	handlers in configuration HTML. Event handlers are still to be
	implmented.

2007-01-21 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_trackback3.rb: fix bug: show invisible trackbacks.

2007-01-19 zunda <zunda at freeshell.org>
	* my-sequel.rb: modified to require 'erb' only when needed
	* my-sequel.rb: MySequel::Conf: modified to use separate parameter,
	and added check boxes to restore to the default values
	* my-sequel.rb: MySequel::css: modified not to use empty css

2007-01-19 zunda <zunda at freeshell.org>
	* my-sequel.rb: copied from zunda's local repository, v.1.28
	* ja/my-sequel.rb: copied from zunda's local repository, v.1.10

2007-01-19 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: fix bug: generate empty feed.

2007-01-18 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb, ping.rb, tb-send.rb: fix charset to UTF-8, and using to_utf8 method.

2007-01-18 zunda <zunda at freeshell.org>
	* category.rb: added a code to recreate category cache files
	when escape or encoding for cache files has been chnaged
